--- a/pages/docker-workshop-ja/04_sharing_app.mdx
+++ b/pages/docker-workshop-ja/04_sharing_app.mdx
@@ -1,33 +1,31 @@
 import Image from 'next/image'
 
-Now that you've built an image, you can share it. To share Docker images, you have to use a Docker
-registry. The default registry is Docker Hub and is where all of the images you've used have come from.
+イメージをビルドしたので、それを共有できます。Dockerイメージを共有するには、Dockerレジストリを使用する必要があります。デフォルトのレジストリはDocker Hubであり、これまで使用してきたすべてのイメージはここから取得されています。
 
 > **Docker ID**
 >
-> A Docker ID lets you access Docker Hub, which is the world's largest library and community for container images. Create a [Docker ID](https://hub.docker.com/signup) for free if you don't have one.
+> Docker IDを使用すると、Docker Hubにアクセスできます。Docker Hubは、世界最大のコンテナイメージのライブラリおよびコミュニティです。まだDocker IDを持っていない場合は、[Docker ID](https://hub.docker.com/signup) を無料で作成してください。
 
-## Create a repository
+## リポジトリを作成する
 
-To push an image, you first need to create a repository on Docker Hub.
+イメージをプッシュするには、まずDocker Hubでリポジトリを作成する必要があります。
 
-1. [Sign up](https://www.docker.com/pricing?utm_source=docker&utm_medium=webreferral&utm_campaign=docs_driven_upgrade) or Sign in to [Docker Hub](https://hub.docker.com).
+1. [サインアップ](https://www.docker.com/pricing?utm_source=docker&utm_medium=webreferral&utm_campaign=docs_driven_upgrade) または [Docker Hubにサインイン](https://hub.docker.com) します。
 
-2. Select the **Create Repository** button.
+2. **Create Repository** ボタンを選択します。
 
-3. For the repository name, use `getting-started`. Make sure the **Visibility** is **Public**.
+3. リポジトリ名には `getting-started` を使用します。**Visibility** が **Public** になっていることを確認します。
 
-4. Select **Create**.
+4. **Create** を選択します。
 
-In the following image, you can see an example Docker command from Docker Hub. This command will push to this repository.
+以下の画像では、Docker HubからのDockerコマンドの例が表示されています。このコマンドでこのリポジトリにプッシュします。
 
 <Image src="/docker-workshop-ja/push-command.webp" alt="Docker command with push example" width="996" height="280" />
 
 
-## Push the image
+## イメージをプッシュする
 
-1. In the command line, run the `docker push` command that you see on Docker
-   Hub. Note that your command will have your Docker ID, not "docker". For example, `docker push YOUR-USER-NAME/getting-started`.
+1. コマンドラインで、Docker Hubに表示されている `docker push` コマンドを実行します。このコマンドには「docker」ではなく、自分のDocker IDが入っているはずです。たとえば、`docker push YOUR-USER-NAME/getting-started` のようになります。
 
    ```console
    $ docker push docker/getting-started
@@ -35,93 +33,83 @@ In the following image, you can see an example Docker command from Docker Hub. T
    An image does not exist locally with the tag: docker/getting-started
    ```
 
-    Why did it fail? The push command was looking for an image named `docker/getting-started`, but
-    didn't find one. If you run `docker image ls`, you won't see one either.
+    なぜ失敗したのでしょうか？ `push` コマンドは `docker/getting-started` という名前のイメージを探しましたが、見つけられませんでした。`docker image ls` を実行しても、同様に見つからないはずです。
 
-    To fix this, you need to tag your existing image you've built to give it another name.
+    この問題を解決するために、ビルドした既存のイメージに新しい名前を付けてタグ付けする必要があります。
 
-2. Sign in to Docker Hub using the command `docker login -u YOUR-USER-NAME`.
+2. `docker login -u YOUR-USER-NAME` コマンドを使用してDocker Hubにサインインします。
 
-3. Use the `docker tag` command to give the `getting-started` image a new name. Replace `YOUR-USER-NAME` with your Docker ID.
+3. `docker tag` コマンドを使用して、`getting-started` イメージに新しい名前を付けます。`YOUR-USER-NAME` を自分のDocker IDに置き換えます。
 
    ```console
    $ docker tag getting-started YOUR-USER-NAME/getting-started
    ```
 
-4. Now run the `docker push` command again. If you're copying the value from
-   Docker Hub, you can drop the `tagname` part, as you didn't add a tag to the
-   image name. If you don't specify a tag, Docker uses a tag called `latest`.
+4. 次に、もう一度 `docker push` コマンドを実行します。Docker Hubからコマンドをコピーしている場合、イメージ名にタグを追加しなかったので、`tagname` 部分を省略できます。タグを指定しない場合、Dockerは `latest` というタグを使用します。
 
    ```console
    $ docker push YOUR-USER-NAME/getting-started
    ```
 
-## Run the image on a new instance
+## 新しいインスタンスでイメージを実行する
 
-Now that your image has been built and pushed into a registry, try running your app on a brand
-new instance that has never seen this container image. To do this, you will use Play with Docker.
+イメージがビルドされ、レジストリにプッシュされたので、このコンテナイメージを見たことがない新しいインスタンスでアプリを実行してみましょう。これを行うには、Play with Dockerを使用します。
 
 > [!NOTE]
 >
-> Play with Docker uses the amd64 platform. If you are using an ARM based Mac with Apple silicon, you will need to rebuild the image to be compatible with Play with Docker and push the new image to your repository.
+> Play with Dockerはamd64プラットフォームを使用します。Appleシリコンを搭載したARMベースのMacを使用している場合は、Play with Dockerと互換性のあるイメージに再ビルドし、新しいイメージをリポジトリにプッシュする必要があります。
 >
-> To build an image for the amd64 platform, use the `--platform` flag.
+> amd64プラットフォーム用のイメージをビルドするには、`--platform` フラグを使用します。
 > ```console
 > $ docker build --platform linux/amd64 -t YOUR-USER-NAME/getting-started .
 > ```
 >
-> Docker buildx also supports building multi-platform images. To learn more, see [Multi-platform images](/build/building/multi-platform.md).
+> Docker buildxもマルチプラットフォームのイメージビルドをサポートしています。詳細は、[マルチプラットフォームイメージ](/build/building/multi-platform.md) を参照してください。
 
+1. ブラウザで [Play with Docker](https://labs.play-with-docker.com/) を開きます。
 
-1. Open your browser to [Play with Docker](https://labs.play-with-docker.com/).
+2. **Login** を選択し、ドロップダウンリストから **docker** を選択します。
 
-2. Select **Login** and then select **docker** from the drop-down list.
+3. Docker Hubアカウントでサインインし、**Start** を選択します。
 
-3. Sign in with your Docker Hub account and then select **Start**.
-
-4. Select the **ADD NEW INSTANCE** option on the left side bar. If you don't see it, make your browser a little wider. After a few seconds, a terminal window opens in your browser.
+4. 左側のサイドバーで **ADD NEW INSTANCE** オプションを選択します。これが見つからない場合、ブラウザの幅を少し広げてください。数秒後、ブラウザ内にターミナルウィンドウが表示されます。
 
     <Image src="/docker-workshop-ja/pwd-add-new-instance.webp" alt="Play with Docker add new instance" width="2052" height="1128" />
 
-5. In the terminal, start your freshly pushed app.
+5. ターミナルで、プッシュしたばかりのアプリを起動します。
 
    ```console
    $ docker run -dp 0.0.0.0:3000:3000 YOUR-USER-NAME/getting-started
    ```
 
-    You should see the image get pulled down and eventually start up.
+   イメージがプルされ、最終的に起動するはずです。
 
-    > [!TIP]
-    >
-    > You may have noticed that this command binds the port mapping to a
-    > different IP address. Previous `docker run` commands published ports to
-    > `127.0.0.1:3000` on the host. This time, you're using `0.0.0.0`.
-    >
-    > Binding to `127.0.0.1` only exposes a container's ports to the loopback
-    > interface. Binding to `0.0.0.0`, however, exposes the container's port
-    > on all interfaces of the host, making it available to the outside world.
-    >
-    > For more information about how port mapping works, see
-    > [Networking](https://docs.docker.com/engine/network/#published-ports).
+   > **ヒント**
+   >
+   > このコマンドが異なるIPアドレスにポートマッピングをバインドしていることに気づいたかもしれません。以前の `docker run` コマンドは、ホストの `127.0.0.1:3000` にポートを公開していましたが、今回は `0.0.0.0` を使用しています。
+   >
+   > `127.0.0.1` にバインドすると、コンテナのポートがループバックインターフェースにのみ公開されます。一方、`0.0.0.0` にバインドすると、コンテナのポートがホストのすべてのインターフェースに公開され、外部からもアクセス可能になります。
+   >
+   > ポートマッピングの仕組みについての詳細は、[ネットワーキング](https://docs.docker.com/engine/network/#published-ports) を参照してください。
 
 6. Select the 3000 badge when it appears.
 
    If the 3000 badge doesn't appear, you can select **Open Port** and specify `3000`.
 
-## Summary
+6. 3000バッジが表示されたら、それを選択します。
 
-In this section, you learned how to share your images by pushing them to a
-registry. You then went to a brand new instance and were able to run the freshly
-pushed image. This is quite common in CI pipelines, where the pipeline will
-create the image and push it to a registry and then the production environment
-can use the latest version of the image.
+   もし3000バッジが表示されない場合は、**Open Port** を選択して `3000` を指定してください。
 
-Related information:
+## まとめ
 
- - [docker CLI reference](https://docs.docker.com/reference/cli/docker/)
- - [Multi-platform images](https://docs.docker.com/build/building/multi-platform)
- - [Docker Hub overview](https://docs.docker.com/docker-hub/)
+このセクションでは、イメージをレジストリにプッシュして共有する方法を学びました。次に、新しいインスタンスにアクセスし、プッシュしたばかりのイメージを実行することができました。これはCIパイプラインではよくある手順で、パイプラインがイメージを作成してレジストリにプッシュし、プロダクション環境がそのイメージの最新バージョンを使用するという流れになります。
 
-## Next steps
+関連情報:
 
-In the next section, you'll learn how to persist data in your containerized application.
+- [docker CLIリファレンス](https://docs.docker.com/reference/cli/docker/)
+- [マルチプラットフォームイメージ](https://docs.docker.com/build/building/multi-platform)
+- [Docker Hub概要](https://docs.docker.com/docker-hub/)
+
+## 次のステップ
+
+次のセクションでは、コンテナ化されたアプリケーションでデータを永続化する方法を学びます。
