--- a/pages/docker-workshop-ja/05_persisting_data.mdx
+++ b/pages/docker-workshop-ja/05_persisting_data.mdx
@@ -1,101 +1,81 @@
 import Image from 'next/image'
 import { Tabs } from 'nextra/components'
 
-In case you didn't notice, your todo list is empty every single time
-you launch the container. Why is this? In this part, you'll dive into how the container is working.
+もし気づいていない場合、コンテナを起動するたびに、todoリストが空になっています。なぜそうなるのでしょうか？このパートでは、コンテナがどのように動作しているかを詳しく見ていきます。
 
-## The container's filesystem
+## コンテナのファイルシステム
 
-When a container runs, it uses the various layers from an image for its filesystem.
-Each container also gets its own "scratch space" to create/update/remove files. Any
-changes won't be seen in another container, even if they're using the same image.
+コンテナが実行されると、ファイルシステムとしてイメージのさまざまなレイヤーを使用します。各コンテナには、ファイルの作成、更新、削除ができる独自の「スクラッチスペース」も与えられます。これらの変更は、同じイメージを使用している他のコンテナでは見られません。
 
-### See this in practice
+### 実際に確認する
 
-To see this in action, you're going to start two containers. In one container, you'll create a file. In the other container, you'll verify the file exists.
-What you'll see is that the file created in one container isn't available in another.
+これを確認するために、2つのコンテナを起動します。1つのコンテナでファイルを作成し、もう1つのコンテナでそのファイルが存在するか確認します。結果として、1つのコンテナで作成したファイルが、別のコンテナには存在しないことがわかります。
 
-1. Start an Alpine container and access its shell.
+1. Alpineコンテナを起動し、シェルにアクセスします。
 
     ```console
     $ docker run -ti --name=mytest alpine
     ```
 
-2. In the container, create a `greeting.txt` file with `hello` inside.
+2. コンテナ内で `greeting.txt` という名前のファイルを作成し、その中に `hello` というテキストを入れます。
 
     ```console
     / # echo "hello" > greeting.txt
     ```
 
-3. Exit the container.
+3. コンテナを終了します。
 
    ```console
    / # exit
    ```
 
-4. Run a new Alpine container and use the `cat` command to verify that the
-   file does not exist.
+4. 新しいAlpineコンテナを起動し、`cat` コマンドを使用してファイルが存在しないことを確認します。
    
    ```console
    $ docker run alpine cat greeting.txt
    ```
 
-   You should see output similar to the following that indicates the file does not exist in the new container.
+   新しいコンテナにファイルが存在しないことを示す、以下のような出力が表示されるはずです。
 
    ```console
    cat: can't open 'greeting.txt': No such file or directory
    ```
 
-5. Go ahead and remove the containers using `docker ps --all` to get the IDs,
-   and then `docker rm -f <container-id>` to remove the containers.
+5. `docker ps --all` コマンドを使用してコンテナのIDを取得し、`docker rm -f <container-id>` コマンドでコンテナを削除します。
 
 
 ## Container volumes
 
-With the previous experiment, you saw that each container starts from the image definition each time it starts. 
-While containers can create, update, and delete files, those changes are lost when you remove the container 
-and Docker isolates all changes to that container. With volumes, you can change all of this.
+前の実験で確認したように、各コンテナは起動するたびにイメージの定義から開始されます。コンテナはファイルを作成、更新、削除できますが、コンテナを削除するとそれらの変更は失われ、Dockerはすべての変更をそのコンテナに隔離します。ボリュームを使えば、これを変更することができます。
 
-[Volumes](https://docs.docker.com/engine/storage/volumes) provide the ability to connect specific filesystem paths of 
-the container back to the host machine. If you mount a directory in the container, changes in that
-directory are also seen on the host machine. If you mount that same directory across container restarts, you'd see
-the same files.
+[ボリューム](https://docs.docker.com/engine/storage/volumes) は、コンテナ内の特定のファイルシステムパスをホストマシンに接続する機能を提供します。コンテナ内のディレクトリをマウントすれば、そのディレクトリ内の変更がホストマシンにも反映されます。コンテナを再起動しても、同じディレクトリをマウントすれば、同じファイルが表示されます。
 
-There are two main types of volumes. You'll eventually use both, but you'll start with volume mounts.
+ボリュームには主に2種類あります。最終的には両方を使用しますが、まずはボリュームマウントから始めます。
 
-## Persist the todo data
+## todoデータの永続化
 
-By default, the todo app stores its data in a SQLite database at
-`/etc/todos/todo.db` in the container's filesystem. If you're not familiar with SQLite, no worries! It's simply a relational database that stores all the data in a single file. While this isn't the best for large-scale applications,
-it works for small demos. You'll learn how to switch this to a different database engine later.
+デフォルトでは、todoアプリはコンテナのファイルシステム内の `/etc/todos/todo.db` にSQLiteデータベースとしてデータを保存します。SQLiteに詳しくない場合でも問題ありません。SQLiteは、すべてのデータを1つのファイルに保存するリレーショナルデータベースです。大規模なアプリケーションには最適ではありませんが、小規模なデモには適しています。後で、これを別のデータベースエンジンに切り替える方法も学びます。
 
-With the database being a single file, if you can persist that file on the host and make it available to the
-next container, it should be able to pick up where the last one left off. By creating a volume and attaching
-(often called "mounting") it to the directory where you stored the data, you can persist the data. As your container 
-writes to the `todo.db` file, it will persist the data to the host in the volume.
+データベースが単一ファイルであるため、このファイルをホストに永続化し、次のコンテナで利用できるようにすれば、前回の続きから実行できるはずです。ボリュームを作成してデータを保存しているディレクトリにアタッチ（マウント）することで、データを永続化できます。コンテナが `todo.db` ファイルに書き込むと、そのデータはホスト上のボリュームに永続化されます。
 
-As mentioned, you're going to use a volume mount. Think of a volume mount as an opaque bucket of data. 
-Docker fully manages the volume, including the storage location on disk. You only need to remember the
-name of the volume.
+前述のように、ボリュームマウントを使用します。ボリュームマウントは、不透明なデータのバケットのようなものと考えてください。Dockerはボリュームを完全に管理し、ディスク上のストレージ場所も含めて管理します。覚えておくべきは、ボリュームの名前だけです。
 
-### Create a volume and start the container
 
-You can create the volume and start the container using the CLI or Docker Desktop's graphical interface.
+### ボリュームを作成し、コンテナを起動する
+
+CLIまたはDocker Desktopのグラフィカルインターフェースを使用して、ボリュームを作成し、コンテナを起動できます。
 
 <Tabs items={['CLI', 'Docker Desktop']}>
   <Tabs.Tab>
-    1. Create a volume by using the `docker volume create` command.
+    1. `docker volume create` コマンドを使用してボリュームを作成します。
 
     ```console
     $ docker volume create todo-db
     ```
 
-    2. Stop and remove the todo app container once again with `docker rm -f <id>`,
-    as it is still running without using the persistent volume.
+    2. 永続化ボリュームを使用せずにまだ実行中のtodoアプリコンテナを、`docker rm -f <id>` で停止して削除します。
 
-    3. Start the todo app container, but add the `--mount` option to specify a
-    volume mount. Give the volume a name, and mount it to `/etc/todos` in the
-    container, which captures all files created at the path.
+    3. `--mount` オプションを追加してボリュームマウントを指定し、todoアプリコンテナを起動します。ボリュームに名前を付け、それをコンテナの `/etc/todos` にマウントします。このディレクトリに作成されたすべてのファイルがキャプチャされます。
 
     ```console
     $ docker run -dp 127.0.0.1:3000:3000 --mount type=volume,src=todo-db,target=/etc/todos getting-started
@@ -103,71 +83,69 @@ You can create the volume and start the container using the CLI or Docker Deskto
 
     > [!NOTE]
     >
-    > If you're using Git Bash, you must use different syntax for this command.
+    > Git Bashを使用している場合、このコマンドの構文が異なります。
     >
     > ```console
     > $ docker run -dp 127.0.0.1:3000:3000 --mount type=volume,src=todo-db,target=//etc/todos getting-started
     > ```
     >
-    > For more details about Git Bash's syntax differences, see
-    > [Working with Git Bash](https://docs.docker.com/desktop/troubleshoot/topics/#working-with-git-bash).
+    > Git Bashの構文の違いについての詳細は、[Git Bashの使用](https://docs.docker.com/desktop/troubleshoot/topics/#working-with-git-bash) を参照してください。
   </Tabs.Tab>
   <Tabs.Tab>
-    To create a volume:
+    ボリュームを作成するには:
 
-    1. Select **Volumes** in Docker Desktop.
-    2. In **Volumes**, select **Create**.
-    3. Specify `todo-db` as the volume name, and then select **Create**.
+    1. Docker Desktopで **Volumes** を選択します。
+    2. **Volumes** で **Create** を選択します。
+    3. ボリューム名に `todo-db` を指定し、**Create** を選択します。
 
-    To stop and remove the app container:
+    アプリコンテナを停止して削除するには:
 
-    1. Select **Containers** in Docker Desktop.
-    2. Select **Delete** in the **Actions** column for the container.
+    1. Docker Desktopで **Containers** を選択します。
+    2. コンテナの **Actions** 列で **Delete** を選択します。
 
-    To start the todo app container with the volume mounted:
+    ボリュームをマウントしてtodoアプリコンテナを起動するには:
 
-    1. Select the search box at the top of Docker Desktop.
-    2. In the search window, select the **Images** tab.
-    3. In the search box, specify the image name, `getting-started`.
+    1. Docker Desktopの上部にある検索ボックスを選択します。
+    2. 検索ウィンドウで **Images** タブを選択します。
+    3. 検索ボックスにイメージ名 `getting-started` を指定します。
 
     > [!TIP]
     >
-    >  Use the search filter to filter images and only show **Local images**.
+    >  **Local images** のみを表示するために検索フィルタを使用してください。
 
-    4. Select your image and then select **Run**.
-    5. Select **Optional settings**.
-    6. In **Host port**, specify the port, for example, `3000`.
-    7. In **Host path**, specify the name of the volume, `todo-db`.
-    8. In **Container path**, specify `/etc/todos`.
-    9. Select **Run**.
+    4. イメージを選択し、**Run** を選択します。
+    5. **Optional settings** を選択します。
+    6. **Host port** にポート番号（例：`3000`）を指定します。
+    7. **Host path** にボリューム名 `todo-db` を指定します。
+    8. **Container path** に `/etc/todos` を指定します。
+    9. **Run** を選択します。
   </Tabs.Tab>
 </Tabs>
 
-### Verify that the data persists
+### データが永続化されていることを確認する
 
-1. Once the container starts up, open the app and add a few items to your todo list.
+1. コンテナが起動したら、アプリを開いて、todoリストにいくつかのアイテムを追加します。
 
     <Image src="/docker-workshop-ja/items-added.webp" alt="Items added to todo list" width="1234" height="644" />
 
-2. Stop and remove the container for the todo app. Use Docker Desktop or `docker ps` to get the ID and then `docker rm -f <id>` to remove it.
+2. Docker Desktopまたは docker ps コマンドを使ってIDを取得し、`docker rm -f <id>` コマンドを使用してtodoアプリコンテナを停止して削除します。
 
-3. Start a new container using the previous steps.
+3. 前の手順を使って新しいコンテナを起動します。
 
-4. Open the app. You should see your items still in your list.
+4. アプリを開くと、リストにまだアイテムが残っているはずです。
 
-5. Go ahead and remove the container when you're done checking out your list.
+5. リストを確認し終えたら、コンテナを削除してください。
 
-You've now learned how to persist data.
+これでデータを永続化する方法を学びました。
 
-## Dive into the volume
+## ボリュームの詳細を確認する
 
-A lot of people frequently ask "Where is Docker storing my data when I use a volume?" If you want to know, 
-you can use the `docker volume inspect` command.
+「ボリュームを使用しているときにDockerはデータをどこに保存しているのか？」とよく聞かれます。これを確認するには、`docker volume inspect` コマンドを使用します。
 
 ```console
 $ docker volume inspect todo-db
 ```
-You should see output like the following:
+次のような出力が表示されるはずです：
 ```console
 [
     {
@@ -182,18 +160,17 @@ You should see output like the following:
 ]
 ```
 
-The `Mountpoint` is the actual location of the data on the disk. Note that on most machines, you will
-need to have root access to access this directory from the host.
+`Mountpoint` はディスク上の実際のデータの保存場所です。ほとんどのマシンでは、このディレクトリにホストからアクセスするにはrootアクセスが必要です。
 
-## Summary
+## まとめ
 
-In this section, you learned how to persist container data.
+このセクションでは、コンテナデータを永続化する方法を学びました。
 
-Related information:
+関連情報:
 
- - [docker CLI reference](https://docs.docker.com/reference/cli/docker/)
- - [Volumes](https://docs.docker.com/engine/storage/volumes)
+ - [docker CLIリファレンス](https://docs.docker.com/reference/cli/docker/)
+ - [ボリューム](https://docs.docker.com/engine/storage/volumes)
 
-## Next steps
+## 次のステップ
 
-Next, you'll learn how you can develop your app more efficiently using bind mounts.
+次は、バインドマウントを使用して、アプリをより効率的に開発する方法を学びます。
